--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "homepage": "https://leanhhuy0709.github.io/my-english-dictionary/",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "typescript": "^5.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "gh-pages": "^6.1.1"
   }
 }
